Leaderboard Alignment Fixed & Opacity removed.

--- a/src/app/portal/rewards/rewards.component.css
+++ b/src/app/portal/rewards/rewards.component.css
@@ -77,7 +77,6 @@
   background-repeat: no-repeat; 
   background-size: cover;
   background-blend-mode: normal;
-  opacity: 0.9;
 }
 
 .outline-pagination {
